--- a/2019/07/Makefile
+++ b/2019/07/Makefile
@@ -1,6 +1,8 @@
-
 part-one.jar:
 	kotlinc -include-runtime -d part-one.jar part-one.kt
 
+part-two.jar:
+	kotlinc -include-runtime -d part-two.jar part-two.kt
+
 fclean:
-	rm -f part-one.jar
+	rm -f part-one.jar part-two.jar
